--- a/.gitignore
+++ b/.gitignore
@@ -8052,3 +8052,329 @@ Javascript/jsWebDOM/node_modules/yaml/types/omap.js
 Javascript/jsWebDOM/node_modules/yaml/types/pairs.js
 Javascript/jsWebDOM/node_modules/yaml/types/set.js
 Javascript/jsWebDOM/node_modules/yaml/types/timestamp.js
+NodeJs/projeto_1/node_modules/.bin/mime
+NodeJs/projeto_1/node_modules/accepts/HISTORY.md
+NodeJs/projeto_1/node_modules/accepts/index.js
+NodeJs/projeto_1/node_modules/accepts/LICENSE
+NodeJs/projeto_1/node_modules/accepts/package.json
+NodeJs/projeto_1/node_modules/accepts/README.md
+NodeJs/projeto_1/node_modules/array-flatten/array-flatten.js
+NodeJs/projeto_1/node_modules/array-flatten/LICENSE
+NodeJs/projeto_1/node_modules/array-flatten/package.json
+NodeJs/projeto_1/node_modules/array-flatten/README.md
+NodeJs/projeto_1/node_modules/body-parser/HISTORY.md
+NodeJs/projeto_1/node_modules/body-parser/index.js
+NodeJs/projeto_1/node_modules/body-parser/LICENSE
+NodeJs/projeto_1/node_modules/body-parser/package.json
+NodeJs/projeto_1/node_modules/body-parser/README.md
+NodeJs/projeto_1/node_modules/body-parser/lib/read.js
+NodeJs/projeto_1/node_modules/body-parser/lib/types/json.js
+NodeJs/projeto_1/node_modules/body-parser/lib/types/raw.js
+NodeJs/projeto_1/node_modules/body-parser/lib/types/text.js
+NodeJs/projeto_1/node_modules/body-parser/lib/types/urlencoded.js
+NodeJs/projeto_1/node_modules/bytes/History.md
+NodeJs/projeto_1/node_modules/bytes/index.js
+NodeJs/projeto_1/node_modules/bytes/LICENSE
+NodeJs/projeto_1/node_modules/bytes/package.json
+NodeJs/projeto_1/node_modules/bytes/Readme.md
+NodeJs/projeto_1/node_modules/content-disposition/HISTORY.md
+NodeJs/projeto_1/node_modules/content-disposition/index.js
+NodeJs/projeto_1/node_modules/content-disposition/LICENSE
+NodeJs/projeto_1/node_modules/content-disposition/package.json
+NodeJs/projeto_1/node_modules/content-disposition/README.md
+NodeJs/projeto_1/node_modules/content-type/HISTORY.md
+NodeJs/projeto_1/node_modules/content-type/index.js
+NodeJs/projeto_1/node_modules/content-type/LICENSE
+NodeJs/projeto_1/node_modules/content-type/package.json
+NodeJs/projeto_1/node_modules/content-type/README.md
+NodeJs/projeto_1/node_modules/cookie/HISTORY.md
+NodeJs/projeto_1/node_modules/cookie/index.js
+NodeJs/projeto_1/node_modules/cookie/LICENSE
+NodeJs/projeto_1/node_modules/cookie/package.json
+NodeJs/projeto_1/node_modules/cookie/README.md
+NodeJs/projeto_1/node_modules/cookie-signature/.npmignore
+NodeJs/projeto_1/node_modules/cookie-signature/History.md
+NodeJs/projeto_1/node_modules/cookie-signature/index.js
+NodeJs/projeto_1/node_modules/cookie-signature/package.json
+NodeJs/projeto_1/node_modules/cookie-signature/Readme.md
+NodeJs/projeto_1/node_modules/debug/.coveralls.yml
+NodeJs/projeto_1/node_modules/debug/.eslintrc
+NodeJs/projeto_1/node_modules/debug/.npmignore
+NodeJs/projeto_1/node_modules/debug/.travis.yml
+NodeJs/projeto_1/node_modules/debug/CHANGELOG.md
+NodeJs/projeto_1/node_modules/debug/component.json
+NodeJs/projeto_1/node_modules/debug/karma.conf.js
+NodeJs/projeto_1/node_modules/debug/LICENSE
+NodeJs/projeto_1/node_modules/debug/Makefile
+NodeJs/projeto_1/node_modules/debug/node.js
+NodeJs/projeto_1/node_modules/debug/package.json
+NodeJs/projeto_1/node_modules/debug/README.md
+NodeJs/projeto_1/node_modules/debug/src/browser.js
+NodeJs/projeto_1/node_modules/debug/src/debug.js
+NodeJs/projeto_1/node_modules/debug/src/index.js
+NodeJs/projeto_1/node_modules/debug/src/inspector-log.js
+NodeJs/projeto_1/node_modules/debug/src/node.js
+NodeJs/projeto_1/node_modules/depd/History.md
+NodeJs/projeto_1/node_modules/depd/index.js
+NodeJs/projeto_1/node_modules/depd/LICENSE
+NodeJs/projeto_1/node_modules/depd/package.json
+NodeJs/projeto_1/node_modules/depd/Readme.md
+NodeJs/projeto_1/node_modules/depd/lib/browser/index.js
+NodeJs/projeto_1/node_modules/depd/lib/compat/callsite-tostring.js
+NodeJs/projeto_1/node_modules/depd/lib/compat/event-listener-count.js
+NodeJs/projeto_1/node_modules/depd/lib/compat/index.js
+NodeJs/projeto_1/node_modules/destroy/index.js
+NodeJs/projeto_1/node_modules/destroy/LICENSE
+NodeJs/projeto_1/node_modules/destroy/package.json
+NodeJs/projeto_1/node_modules/destroy/README.md
+NodeJs/projeto_1/node_modules/ee-first/index.js
+NodeJs/projeto_1/node_modules/ee-first/LICENSE
+NodeJs/projeto_1/node_modules/ee-first/package.json
+NodeJs/projeto_1/node_modules/ee-first/README.md
+NodeJs/projeto_1/node_modules/encodeurl/HISTORY.md
+NodeJs/projeto_1/node_modules/encodeurl/index.js
+NodeJs/projeto_1/node_modules/encodeurl/LICENSE
+NodeJs/projeto_1/node_modules/encodeurl/package.json
+NodeJs/projeto_1/node_modules/encodeurl/README.md
+NodeJs/projeto_1/node_modules/escape-html/index.js
+NodeJs/projeto_1/node_modules/escape-html/LICENSE
+NodeJs/projeto_1/node_modules/escape-html/package.json
+NodeJs/projeto_1/node_modules/escape-html/Readme.md
+NodeJs/projeto_1/node_modules/etag/HISTORY.md
+NodeJs/projeto_1/node_modules/etag/index.js
+NodeJs/projeto_1/node_modules/etag/LICENSE
+NodeJs/projeto_1/node_modules/etag/package.json
+NodeJs/projeto_1/node_modules/etag/README.md
+NodeJs/projeto_1/node_modules/express/History.md
+NodeJs/projeto_1/node_modules/express/index.js
+NodeJs/projeto_1/node_modules/express/LICENSE
+NodeJs/projeto_1/node_modules/express/package.json
+NodeJs/projeto_1/node_modules/express/Readme.md
+NodeJs/projeto_1/node_modules/express/lib/application.js
+NodeJs/projeto_1/node_modules/express/lib/express.js
+NodeJs/projeto_1/node_modules/express/lib/request.js
+NodeJs/projeto_1/node_modules/express/lib/response.js
+NodeJs/projeto_1/node_modules/express/lib/utils.js
+NodeJs/projeto_1/node_modules/express/lib/view.js
+NodeJs/projeto_1/node_modules/express/lib/middleware/init.js
+NodeJs/projeto_1/node_modules/express/lib/middleware/query.js
+NodeJs/projeto_1/node_modules/express/lib/router/index.js
+NodeJs/projeto_1/node_modules/express/lib/router/layer.js
+NodeJs/projeto_1/node_modules/express/lib/router/route.js
+NodeJs/projeto_1/node_modules/finalhandler/HISTORY.md
+NodeJs/projeto_1/node_modules/finalhandler/index.js
+NodeJs/projeto_1/node_modules/finalhandler/LICENSE
+NodeJs/projeto_1/node_modules/finalhandler/package.json
+NodeJs/projeto_1/node_modules/finalhandler/README.md
+NodeJs/projeto_1/node_modules/forwarded/HISTORY.md
+NodeJs/projeto_1/node_modules/forwarded/index.js
+NodeJs/projeto_1/node_modules/forwarded/LICENSE
+NodeJs/projeto_1/node_modules/forwarded/package.json
+NodeJs/projeto_1/node_modules/forwarded/README.md
+NodeJs/projeto_1/node_modules/fresh/HISTORY.md
+NodeJs/projeto_1/node_modules/fresh/index.js
+NodeJs/projeto_1/node_modules/fresh/LICENSE
+NodeJs/projeto_1/node_modules/fresh/package.json
+NodeJs/projeto_1/node_modules/fresh/README.md
+NodeJs/projeto_1/node_modules/http-errors/HISTORY.md
+NodeJs/projeto_1/node_modules/http-errors/index.js
+NodeJs/projeto_1/node_modules/http-errors/LICENSE
+NodeJs/projeto_1/node_modules/http-errors/package.json
+NodeJs/projeto_1/node_modules/http-errors/README.md
+NodeJs/projeto_1/node_modules/iconv-lite/Changelog.md
+NodeJs/projeto_1/node_modules/iconv-lite/LICENSE
+NodeJs/projeto_1/node_modules/iconv-lite/package.json
+NodeJs/projeto_1/node_modules/iconv-lite/README.md
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/dbcs-codec.js
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/dbcs-data.js
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/index.js
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/internal.js
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/sbcs-codec.js
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/sbcs-data-generated.js
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/sbcs-data.js
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/utf7.js
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/utf16.js
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/tables/big5-added.json
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/tables/cp936.json
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/tables/cp949.json
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/tables/cp950.json
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/tables/eucjp.json
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/tables/gb18030-ranges.json
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/tables/gbk-added.json
+NodeJs/projeto_1/node_modules/iconv-lite/encodings/tables/shiftjis.json
+NodeJs/projeto_1/node_modules/iconv-lite/lib/bom-handling.js
+NodeJs/projeto_1/node_modules/iconv-lite/lib/extend-node.js
+NodeJs/projeto_1/node_modules/iconv-lite/lib/index.d.ts
+NodeJs/projeto_1/node_modules/iconv-lite/lib/index.js
+NodeJs/projeto_1/node_modules/iconv-lite/lib/streams.js
+NodeJs/projeto_1/node_modules/inherits/inherits_browser.js
+NodeJs/projeto_1/node_modules/inherits/inherits.js
+NodeJs/projeto_1/node_modules/inherits/LICENSE
+NodeJs/projeto_1/node_modules/inherits/package.json
+NodeJs/projeto_1/node_modules/inherits/README.md
+NodeJs/projeto_1/node_modules/ipaddr.js/ipaddr.min.js
+NodeJs/projeto_1/node_modules/ipaddr.js/LICENSE
+NodeJs/projeto_1/node_modules/ipaddr.js/package.json
+NodeJs/projeto_1/node_modules/ipaddr.js/README.md
+NodeJs/projeto_1/node_modules/ipaddr.js/lib/ipaddr.js
+NodeJs/projeto_1/node_modules/ipaddr.js/lib/ipaddr.js.d.ts
+NodeJs/projeto_1/node_modules/media-typer/HISTORY.md
+NodeJs/projeto_1/node_modules/media-typer/index.js
+NodeJs/projeto_1/node_modules/media-typer/LICENSE
+NodeJs/projeto_1/node_modules/media-typer/package.json
+NodeJs/projeto_1/node_modules/media-typer/README.md
+NodeJs/projeto_1/node_modules/merge-descriptors/HISTORY.md
+NodeJs/projeto_1/node_modules/merge-descriptors/index.js
+NodeJs/projeto_1/node_modules/merge-descriptors/LICENSE
+NodeJs/projeto_1/node_modules/merge-descriptors/package.json
+NodeJs/projeto_1/node_modules/merge-descriptors/README.md
+NodeJs/projeto_1/node_modules/methods/HISTORY.md
+NodeJs/projeto_1/node_modules/methods/index.js
+NodeJs/projeto_1/node_modules/methods/LICENSE
+NodeJs/projeto_1/node_modules/methods/package.json
+NodeJs/projeto_1/node_modules/methods/README.md
+NodeJs/projeto_1/node_modules/mime/.npmignore
+NodeJs/projeto_1/node_modules/mime/CHANGELOG.md
+NodeJs/projeto_1/node_modules/mime/cli.js
+NodeJs/projeto_1/node_modules/mime/LICENSE
+NodeJs/projeto_1/node_modules/mime/mime.js
+NodeJs/projeto_1/node_modules/mime/package.json
+NodeJs/projeto_1/node_modules/mime/README.md
+NodeJs/projeto_1/node_modules/mime/types.json
+NodeJs/projeto_1/node_modules/mime/src/build.js
+NodeJs/projeto_1/node_modules/mime/src/test.js
+NodeJs/projeto_1/node_modules/mime-db/db.json
+NodeJs/projeto_1/node_modules/mime-db/HISTORY.md
+NodeJs/projeto_1/node_modules/mime-db/index.js
+NodeJs/projeto_1/node_modules/mime-db/LICENSE
+NodeJs/projeto_1/node_modules/mime-db/package.json
+NodeJs/projeto_1/node_modules/mime-db/README.md
+NodeJs/projeto_1/node_modules/mime-types/HISTORY.md
+NodeJs/projeto_1/node_modules/mime-types/index.js
+NodeJs/projeto_1/node_modules/mime-types/LICENSE
+NodeJs/projeto_1/node_modules/mime-types/package.json
+NodeJs/projeto_1/node_modules/mime-types/README.md
+NodeJs/projeto_1/node_modules/ms/index.js
+NodeJs/projeto_1/node_modules/ms/license.md
+NodeJs/projeto_1/node_modules/ms/package.json
+NodeJs/projeto_1/node_modules/ms/readme.md
+NodeJs/projeto_1/node_modules/negotiator/HISTORY.md
+NodeJs/projeto_1/node_modules/negotiator/index.js
+NodeJs/projeto_1/node_modules/negotiator/LICENSE
+NodeJs/projeto_1/node_modules/negotiator/package.json
+NodeJs/projeto_1/node_modules/negotiator/README.md
+NodeJs/projeto_1/node_modules/negotiator/lib/charset.js
+NodeJs/projeto_1/node_modules/negotiator/lib/encoding.js
+NodeJs/projeto_1/node_modules/negotiator/lib/language.js
+NodeJs/projeto_1/node_modules/negotiator/lib/mediaType.js
+NodeJs/projeto_1/node_modules/on-finished/HISTORY.md
+NodeJs/projeto_1/node_modules/on-finished/index.js
+NodeJs/projeto_1/node_modules/on-finished/LICENSE
+NodeJs/projeto_1/node_modules/on-finished/package.json
+NodeJs/projeto_1/node_modules/on-finished/README.md
+NodeJs/projeto_1/node_modules/parseurl/HISTORY.md
+NodeJs/projeto_1/node_modules/parseurl/index.js
+NodeJs/projeto_1/node_modules/parseurl/LICENSE
+NodeJs/projeto_1/node_modules/parseurl/package.json
+NodeJs/projeto_1/node_modules/parseurl/README.md
+NodeJs/projeto_1/node_modules/path-to-regexp/History.md
+NodeJs/projeto_1/node_modules/path-to-regexp/index.js
+NodeJs/projeto_1/node_modules/path-to-regexp/LICENSE
+NodeJs/projeto_1/node_modules/path-to-regexp/package.json
+NodeJs/projeto_1/node_modules/path-to-regexp/Readme.md
+NodeJs/projeto_1/node_modules/proxy-addr/HISTORY.md
+NodeJs/projeto_1/node_modules/proxy-addr/index.js
+NodeJs/projeto_1/node_modules/proxy-addr/LICENSE
+NodeJs/projeto_1/node_modules/proxy-addr/package.json
+NodeJs/projeto_1/node_modules/proxy-addr/README.md
+NodeJs/projeto_1/node_modules/qs/.editorconfig
+NodeJs/projeto_1/node_modules/qs/.eslintignore
+NodeJs/projeto_1/node_modules/qs/.eslintrc
+NodeJs/projeto_1/node_modules/qs/CHANGELOG.md
+NodeJs/projeto_1/node_modules/qs/LICENSE
+NodeJs/projeto_1/node_modules/qs/package.json
+NodeJs/projeto_1/node_modules/qs/README.md
+NodeJs/projeto_1/node_modules/qs/dist/qs.js
+NodeJs/projeto_1/node_modules/qs/lib/formats.js
+NodeJs/projeto_1/node_modules/qs/lib/index.js
+NodeJs/projeto_1/node_modules/qs/lib/parse.js
+NodeJs/projeto_1/node_modules/qs/lib/stringify.js
+NodeJs/projeto_1/node_modules/qs/lib/utils.js
+NodeJs/projeto_1/node_modules/qs/test/.eslintrc
+NodeJs/projeto_1/node_modules/qs/test/index.js
+NodeJs/projeto_1/node_modules/qs/test/parse.js
+NodeJs/projeto_1/node_modules/qs/test/stringify.js
+NodeJs/projeto_1/node_modules/qs/test/utils.js
+NodeJs/projeto_1/node_modules/range-parser/HISTORY.md
+NodeJs/projeto_1/node_modules/range-parser/index.js
+NodeJs/projeto_1/node_modules/range-parser/LICENSE
+NodeJs/projeto_1/node_modules/range-parser/package.json
+NodeJs/projeto_1/node_modules/range-parser/README.md
+NodeJs/projeto_1/node_modules/raw-body/HISTORY.md
+NodeJs/projeto_1/node_modules/raw-body/index.d.ts
+NodeJs/projeto_1/node_modules/raw-body/index.js
+NodeJs/projeto_1/node_modules/raw-body/LICENSE
+NodeJs/projeto_1/node_modules/raw-body/package.json
+NodeJs/projeto_1/node_modules/raw-body/README.md
+NodeJs/projeto_1/node_modules/safe-buffer/index.d.ts
+NodeJs/projeto_1/node_modules/safe-buffer/index.js
+NodeJs/projeto_1/node_modules/safe-buffer/LICENSE
+NodeJs/projeto_1/node_modules/safe-buffer/package.json
+NodeJs/projeto_1/node_modules/safe-buffer/README.md
+NodeJs/projeto_1/node_modules/safer-buffer/dangerous.js
+NodeJs/projeto_1/node_modules/safer-buffer/LICENSE
+NodeJs/projeto_1/node_modules/safer-buffer/package.json
+NodeJs/projeto_1/node_modules/safer-buffer/Porting-Buffer.md
+NodeJs/projeto_1/node_modules/safer-buffer/Readme.md
+NodeJs/projeto_1/node_modules/safer-buffer/safer.js
+NodeJs/projeto_1/node_modules/safer-buffer/tests.js
+NodeJs/projeto_1/node_modules/send/HISTORY.md
+NodeJs/projeto_1/node_modules/send/index.js
+NodeJs/projeto_1/node_modules/send/LICENSE
+NodeJs/projeto_1/node_modules/send/package.json
+NodeJs/projeto_1/node_modules/send/README.md
+NodeJs/projeto_1/node_modules/send/node_modules/ms/index.js
+NodeJs/projeto_1/node_modules/send/node_modules/ms/license.md
+NodeJs/projeto_1/node_modules/send/node_modules/ms/package.json
+NodeJs/projeto_1/node_modules/send/node_modules/ms/readme.md
+NodeJs/projeto_1/node_modules/serve-static/HISTORY.md
+NodeJs/projeto_1/node_modules/serve-static/index.js
+NodeJs/projeto_1/node_modules/serve-static/LICENSE
+NodeJs/projeto_1/node_modules/serve-static/package.json
+NodeJs/projeto_1/node_modules/serve-static/README.md
+NodeJs/projeto_1/node_modules/setprototypeof/index.d.ts
+NodeJs/projeto_1/node_modules/setprototypeof/index.js
+NodeJs/projeto_1/node_modules/setprototypeof/LICENSE
+NodeJs/projeto_1/node_modules/setprototypeof/package.json
+NodeJs/projeto_1/node_modules/setprototypeof/README.md
+NodeJs/projeto_1/node_modules/setprototypeof/test/index.js
+NodeJs/projeto_1/node_modules/statuses/codes.json
+NodeJs/projeto_1/node_modules/statuses/HISTORY.md
+NodeJs/projeto_1/node_modules/statuses/index.js
+NodeJs/projeto_1/node_modules/statuses/LICENSE
+NodeJs/projeto_1/node_modules/statuses/package.json
+NodeJs/projeto_1/node_modules/statuses/README.md
+NodeJs/projeto_1/node_modules/toidentifier/index.js
+NodeJs/projeto_1/node_modules/toidentifier/LICENSE
+NodeJs/projeto_1/node_modules/toidentifier/package.json
+NodeJs/projeto_1/node_modules/toidentifier/README.md
+NodeJs/projeto_1/node_modules/type-is/HISTORY.md
+NodeJs/projeto_1/node_modules/type-is/index.js
+NodeJs/projeto_1/node_modules/type-is/LICENSE
+NodeJs/projeto_1/node_modules/type-is/package.json
+NodeJs/projeto_1/node_modules/type-is/README.md
+NodeJs/projeto_1/node_modules/unpipe/HISTORY.md
+NodeJs/projeto_1/node_modules/unpipe/index.js
+NodeJs/projeto_1/node_modules/unpipe/LICENSE
+NodeJs/projeto_1/node_modules/unpipe/package.json
+NodeJs/projeto_1/node_modules/unpipe/README.md
+NodeJs/projeto_1/node_modules/utils-merge/.npmignore
+NodeJs/projeto_1/node_modules/utils-merge/index.js
+NodeJs/projeto_1/node_modules/utils-merge/LICENSE
+NodeJs/projeto_1/node_modules/utils-merge/package.json
+NodeJs/projeto_1/node_modules/utils-merge/README.md
+NodeJs/projeto_1/node_modules/vary/HISTORY.md
+NodeJs/projeto_1/node_modules/vary/index.js
+NodeJs/projeto_1/node_modules/vary/LICENSE
+NodeJs/projeto_1/node_modules/vary/package.json
+NodeJs/projeto_1/node_modules/vary/README.md
