--- a/ReactJS/FormaçaoReactJs/projeto2/package.json
+++ b/ReactJS/FormaçaoReactJs/projeto2/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "fontsource-roboto": "^4.0.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
